--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classificador de nível de herói</title>
-    <link rel="stylesheet" href="/src/assets/css/main.css" />
-    <script src="/src/assets/js/hero.js" ></script>
+    <link rel="stylesheet" href="./src/assets/css/main.css" />
+    <script src="./src/assets/js/hero.js" ></script>
   </head>
   <body class="bg-img">
-    <audio id="bg-song" src="/src/assets/audio/bg.wav" loop></audio>
-    <audio id="card-song" src="/src/assets/audio/flip-card.wav"></audio>
-    <audio id="alert-song" src="/src/assets/audio/alert.wav" ></audio>
+    <audio id="bg-song" src="./src/assets/audio/bg.wav" loop></audio>
+    <audio id="card-song" src="./src/assets/audio/flip-card.wav"></audio>
+    <audio id="alert-song" src="./src/assets/audio/alert.wav" ></audio>
     <main>
       <div class="alert">
         <h2>Atenção!</h2>
